--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ python:
 #install: "pip install -r requirements.txt"
 install: pip install coveralls
 # command to run tests
-script: coverage run --source=pyzufall nosetests
+script: nosetests --with-coverage
 after_success: coveralls
