--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: python
 python:
-#  - "2.7"
+  - "2.7"
   - "3.2"
   - "3.3"
   - "3.4"
   - "nightly"
-#  - "pypy"
+  - "pypy"
   - "pypy3"
 sudo: false
 install: pip install coveralls
