--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ python:
 sudo: false
 install: pip install coveralls
 script: nosetests --with-coverage --cover-package=pyzufall --with-doctest
+script: python setup.py --install
 after_success: coveralls
 notifications:
   email:
