--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ python:
 sudo: false
 install: pip install coveralls
 script: nosetests --with-coverage --cover-package=pyzufall --with-doctest
-script: python setup.py --install
+script: python setup.py install
+script: vcardgen -c 3 test.vcf
+script: cat test.vcf
 after_success: coveralls
 notifications:
   email:
