--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,9 @@ python:
 sudo: false
 install:
   - pip install -r requirements.txt
-  - pip install coveralls
+  # Coveralls 4.0 doesn't support Python 3.2
+  - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then travis_retry pip install coverage==3.7.1; fi
+  - if [ "$TRAVIS_PYTHON_VERSION" != "3.2" ]; then travis_retry pip install coverage; fi
 script:
   - nosetests --with-coverage --cover-package=pyzufall --with-doctest
   - python setup.py install
