--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,8 @@ python:
   - "pypy"
   - "pypy3"
 sudo: false
-install:
-  - pip install -r requirements.txt
-  - pip install coveralls
 script:
-  - nosetests --with-coverage --cover-package=pyzufall --with-doctest
+  - python setup.py nosetests
   - python setup.py install
 after_success: coveralls
 notifications:
