--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ python:
   - "pypy"
   - "pypy3"
 sudo: false
+install:
+  - pip install -r requirements.txt
 script:
   - python setup.py nosetests
   - python setup.py install
